# src/controllers/Content/upvote.controller.ts
@@ -1,21 +1,26 @@
 import UpvoteService from "../../services/Content/upvote.service";
 import { Request, Response } from "express";
 
+
 class UpvoteController {
-    async upvotePost(req: Request, res: Response) {
+    upvoteService = new UpvoteService();
+    async upvotePost(req: Request, res: Response) : Promise<any> {
         const { postId, userId } = req.body;
-        const upvoteService = new UpvoteService();
-        await upvoteService.upvotePost(postId, userId);
+        const result = await UpvoteService.upvotePost(postId, userId);
+        console.log(result);
+        return res.status(200).json(result);
     }
-    async upvoteBlog(req: Request, res: Response) {
+    async upvoteBlog(req: Request, res: Response) : Promise<any> {
         const { blogId, userId } = req.body;
-        const upvoteService = new UpvoteService();
-        await upvoteService.upvoteBlog(blogId, userId);
+        const result = await UpvoteService.upvoteBlog(blogId, userId);
+        console.log(result);
+        return res.status(200).json(result);
     }
-    async upvoteVlog(req: Request, res: Response) {
+    async upvoteVlog(req: Request, res: Response) : Promise<any> {
         const { vlogId, userId } = req.body;
-        const upvoteService = new UpvoteService();
-        await upvoteService.upvoteVlog(vlogId, userId);
+        const result = await UpvoteService.upvoteVlog(vlogId, userId);
+        console.log(result);
+        return res.status(200).json(result);
     }
 }
 
