# src/models/Content/plan.model.ts
@@ -1,24 +1,32 @@
 import Base from "../base.model";
-
+import getWeather from "../../services/Weather/weather.api";
 class PlanModel extends Base {
   tableFields = ["id", "title", "data", "created_at", "upvote_count"];
 
   async getPlan(id: number) {
     try {
-      return await this.query("SELECT * FROM plans WHERE id = $1", [id]);
+      return await this.query("SELECT * FROM plan WHERE id = $1", [id]);
     } catch (error) {
       console.error("Database error in getPlan:", error);
       throw new Error("Failed to retrieve plan");
     }
   }
 
-  async createPlan(userId: number, title: string, data: string) {
+  async createPlan(userId: number, title: string, data: string, start_date: Date, end_date: Date,latitude: string, longitude: string) {
     try {
-      return await this.query(
-        "INSERT INTO plans (created_by, title, data) VALUES ($1, $2, $3) RETURNING *",
-        [userId, title, data]
+      const result = await this.query(
+        "INSERT INTO plan (created_by, title, data, start_date, end_date,latitude, longitude) VALUES ($1, $2, $3, $4, $5, $6, $7) RETURNING *",
+        [userId, title, data, start_date, end_date,latitude, longitude]
       );
-    } catch (error) {
+      let weathers = [];
+      for(let i = start_date; i <= end_date; i.setDate(i.getDate() + 1)){
+      const weather = await getWeather(latitude, longitude, start_date.toISOString());
+      weathers.push(weather);
+      }
+      const weathersJson = JSON.stringify(weathers);
+      await this.query("UPDATE plan SET weathers = $1 WHERE id = $2", [weathersJson, result[0].id]);
+      return result[0];
+    } catch (error: any) {
       console.error("Database error in createPlan:", error);
       throw new Error("Failed to create plan");
     }
@@ -39,7 +47,7 @@ class PlanModel extends Base {
   async deletePlan(id: number) {
     try {
       return await this.query(
-        "DELETE FROM plans WHERE id = $1 RETURNING *",
+        "DELETE FROM plan WHERE id = $1 RETURNING *",
         [id]
       );
     } catch (error) {
@@ -49,7 +57,8 @@ class PlanModel extends Base {
   }
   async getUserPlans(userId : number){
     try {
-      return this.query("SELECT * FROM plans WHERE created_by = $1", [userId]);
+      console.log(userId);
+      return this.query("SELECT * FROM plan WHERE created_by = $1 JOIN user ON plan.created_by = user.id order by plan.created_at desc", [userId]);
     } catch (error) {
       console.error("Database error in getUserPlans:", error);
       throw new Error("Failed to retrieve user plans");
